# graphfinder.github.io

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-crates.yml  release-github.yml  release-pypi.yml
crates/graph-py/: Cargo.toml
crates/graph-py/src/: lib.rs
crates/graphfinder-core/: Cargo.toml
crates/graphfinder-core/examples/: basic.rs  compare.rs  puzzles.rs  shortest_paths.rs  strategies.rs
crates/graphfinder-core/src/: heuristic.rs  lib.rs  search.rs  shortest_paths.rs  strategies.rs  traits.rs
crates/graphfinder-core/src/domains/: graphs.rs  maze.rs  mod.rs
crates/graphfinder-core/src/frontier/: mod.rs
crates/graphfinder-core/src/graph/: csr.rs  grid.rs  mod.rs
crates/graphfinder-core/src/puzzles/: hanoi.rs  mod.rs  npuzzle.rs  wordladder.rs
crates/graphfinder-core/tests/: optimality.rs  puzzles.rs  shortest_paths.rs  strategies.rs
docs/: algorithms.md  api.md  architecture.md  domains.md  getting-started.md  gui.md  heuristics.md  index.md  installation.md  integrations.md  puzzles.md  shortest-paths.md  visualization.md
docs/tutorials/: comparison.md  graphs.md  grid.md  learned-heuristic.md
examples/: build_docs_assets.py  demo_viz.py  learned_heuristic.py  quickstart.py
gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/lib/: api.ts
python/: README.md
python/graphfinder/: __init__.py  viz.py
python/graphfinder/integrations/: __init__.py  agents.py  graphviz.py  gym.py  networkx.py  osm.py  pandas.py  scipy.py  torch.py
tests/: test_integrations.py  test_python.py  test_viz.py
