[workspace]
resolver = "2"
members = [
    "crates/graphfinder-core",
    "crates/graph-py",
]
# The Tauri desktop app (gui/src-tauri) is its own isolated workspace so its
# heavy GUI dependency tree never touches `cargo test`/CI for the library.
exclude = ["gui"]

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT"
authors = ["Jose L. Salmeron"]
repository = "https://github.com/graphfinder/graphfinder.github.io"
homepage = "https://graphfinder.github.io"

[workspace.dependencies]
rand = "0.8"
rand_chacha = "0.3"   # RNG with reproducible seed (reproducibility matters)
