[package]
name = "graphfinder-gui"
version = "0.1.0"
description = "Desktop GUI for graphfinder (Tauri + Svelte)"
edition = "2021"
license = "MIT"
repository = "https://github.com/graphfinder/graphfinder.github.io"

# Isolated workspace: keep the Tauri dependency tree out of the library workspace.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
graphfinder-core = { path = "../../crates/graphfinder-core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
